# rash

./: .gitignore  README.md  meson.build
src/: main.c
src/args/: args.c  args.h  meson.build
src/env/: env.c  env.h  meson.build
src/execution/: execution.c  execution.h  meson.build  pipeline.c  pipeline.h  redir.c  redir.h
src/execution/builtins/: bool.c  bool.h  cd.c  cd.h  dot.c  dot.h  echo.c  echo.h
src/expansion/: Makefile  compile.txt  expansion.c  expansion.h  expansion_test.c  meson.build
src/lexer/: Makefile  file.txt  lexer  lexer.c  lexer.h  lexer_test.c  meson.build
src/parser/: Makefile  ast.h  ast_free.c  ast_free.h  ast_print.c  ast_print.h  meson.build  parser  parser.c  parser.h  parser_test.c
src/repl/: meson.build  repl.c  repl.h
src/stream/: meson.build  stream.c  stream.h
src/utils/: file_tools.c  meson.build  str_utils.c  utils.h
src/utils/hash_map/: hash_map.c  hash_map.h  hash_map.h.gch
src/utils/my_itoa/: my_itoa.c
src/utils/vector/: a.out  main.c  vector.c  vector.h
tests/: compile_commands.json  pre_test_suite.py  test.sh
tests/full_tests/: alias_after_unalias.in  alias_alias.in  alias_both_double_quote.in  alias_both_simple_quote.in  alias_dont_exist.in  alias_double_quote.in  alias_double_quote_mult.in  alias_funcdec.in  alias_if.in  alias_in_name_double_quote.in  alias_in_name_simple_quote.in  alias_mult.in  alias_mult_mixed.in  alias_print.in  alias_realias.in  alias_simple.in  alias_simple_ls.in  alias_simple_quote.in  alias_simple_quote_mult.in  all_quotes_01.in  all_quotes_1  ascii_house0.in  ascii_house1.in  basic_quotes2  case_bad_esac.in  case_bad_expression.in  case_bad_in.in  case_bad_no_double_semicolon.in  case_bad_no_esac.in  case_bad_no_in.in  case_bad_one_semicolon.in  case_bad_one_semicolon2.in  case_bad_parenthese.in  case_bad_statement.in  case_bool.in  case_bool2.in  case_digit_simple.in  case_in_for.in  case_mixed_newline_statements.in  case_mixed_newline_statements2.in  (+204 more)
tests/step1/: command_list_spaces.in  command_list_terminating_semi.in  command_list_two_commands.in  comments_after_two_echo.in  comments_composed.in  comments_croisillon1.in  comments_croisillon2.in  comments_escaped.in  comments_in_line.in  comments_just_a_comment.in  comments_no_newline.in  comments_not_first.in  comments_quoted.in  comments_shebang.in  comments_space_comments.in  echo_E_simple2.in  echo_E_simple3.in  echo_args.in  echo_bad_command.in  echo_bad_option2.in  echo_badlong_flag.in  echo_e1.in  echo_e3.in  echo_e_backslash.in  echo_e_simple.in  echo_escaped_backslash2.in  echo_escaped_x.in  echo_house_single_quotes.in  if_bad_if1.in  if_bad_if3.in  if_compound_list_bad_sep1.in  if_compound_list_bad_sep2.in  if_compound_list_big_bodies.in  if_compound_list_many_cond.in  if_compound_list_multi_line.in  if_embedded2.in  (+8 more)
(+71 files in other folders)
